--- a/README.org
+++ b/README.org
@@ -225,21 +225,23 @@ When opening a file with IDO (~C-x C-f~):
 
 In Dired (see mark [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Marks-vs-Flags.html][here]], and operations on file [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Operating-on-Files.html#Operating-on-Files][here]]):
 
-| Key name | Operation                  |
-|----------+----------------------------|
-| ~$~      | Go to a bookmark           |
-| ~(~      | Hide/show details          |
-| ~s~      | Sort by date or filename   |
-| ~m~      | Mark a file/folder         |
-| ~* /~    | Mark all folders           |
-| ~* s~    | Mark all files and folders |
-| ~u~      | Unmark a file/folder       |
-| ~U~      | Unmark all                 |
-| ~t~      | Toggle mark                |
-|----------+----------------------------|
-| ~C~      | Copy (marked) file(s)      |
-| ~D~      | Delete (marked) file(s)    |
-| ~R~      | Rename (marked) file(s)    |
+| Key name | Operation                                                  |
+|----------+------------------------------------------------------------|
+| ~$~      | Go to a bookmark                                           |
+| ~(~      | Hide/show details                                          |
+| ~s~      | Sort by date or filename                                   |
+| ~m~      | Mark a file/folder                                         |
+| ~* /~    | Mark all folders                                           |
+| ~* s~    | Mark all files and folders                                 |
+| ~u~      | Unmark a file/folder                                       |
+| ~U~      | Unmark all                                                 |
+| ~t~      | Toggle mark                                                |
+|----------+------------------------------------------------------------|
+| ~C~      | Copy (marked) file(s)                                      |
+| ~D~      | Delete (marked) file(s)                                    |
+| ~R~      | Rename (marked) file(s)                                    |
+| ~A~      | Search with regexp content of (marked) file(s)             |
+| ~Q)~     | Search and replace with regexp content of (marked) file(s) |
 
 
 ** Polymode
