Typo key bindings.

--- a/README.org
+++ b/README.org
@@ -241,7 +241,7 @@ In Dired (see mark [[https://www.gnu.org/software/emacs/manual/html_node/emacs/M
 | ~D~      | Delete (marked) file(s)                                    |
 | ~R~      | Rename (marked) file(s)                                    |
 | ~A~      | Search with regexp content of (marked) file(s)             |
-| ~Q)~     | Search and replace with regexp content of (marked) file(s) |
+| ~Q~     | Search and replace with regexp content of (marked) file(s) |
 
 
 ** Polymode
