--- a/README.org
+++ b/README.org
@@ -236,12 +236,13 @@ In Dired (see mark [[https://www.gnu.org/software/emacs/manual/html_node/emacs/M
 | ~u~      | Unmark a file/folder                                       |
 | ~U~      | Unmark all                                                 |
 | ~t~      | Toggle mark                                                |
+| ~/~      | Dynamically filter files/folders (=dired-narrow=)          |
 |----------+------------------------------------------------------------|
 | ~C~      | Copy (marked) file(s)                                      |
 | ~D~      | Delete (marked) file(s)                                    |
 | ~R~      | Rename (marked) file(s)                                    |
 | ~A~      | Search with regexp content of (marked) file(s)             |
-| ~Q~     | Search and replace with regexp content of (marked) file(s) |
+| ~Q~      | Search and replace with regexp content of (marked) file(s) |
 
 
 ** Polymode
