--- a/README.org
+++ b/README.org
@@ -230,6 +230,8 @@ In Dired (see mark [[https://www.gnu.org/software/emacs/manual/html_node/emacs/M
 | ~$~      | Go to a bookmark                                           |
 | ~(~      | Hide/show details                                          |
 | ~s~      | Sort by date or filename                                   |
+| ~i~      | Include subdirectory                                       |
+|----------+------------------------------------------------------------|
 | ~m~      | Mark a file/folder                                         |
 | ~* /~    | Mark all folders                                           |
 | ~* s~    | Mark all files and folders                                 |
