--- a/init.org
+++ b/init.org
@@ -1296,7 +1296,7 @@ Set up default PostgreSQL credentials:
 # #+END_SRC
 
 In the output, we first make sure that lines are not truncated (DOES
-NOT ):
+NOT WORK):
 
 #+BEGIN_SRC emacs-lisp
   (add-hook 'sql-interactive-mode-hook
@@ -1305,39 +1305,39 @@ NOT ):
               (setq truncate-lines t)))
 #+END_SRC
 
-And that table formating is not off when using =sql-send-region= to
-execute a query in a SQLi buffer (because the column names are printed
-on the same row as the the prompt). We [[https://www.emacswiki.org/emacs/SqlMode][simply add a newline]] before the
-comint output (for all queries, even queries run at the prompt):
+# And that table formating is not off when using =sql-send-region= to
+# execute a query in a SQLi buffer (because the column names are printed
+# on the same row as the the prompt). We [[https://www.emacswiki.org/emacs/SqlMode][simply add a newline]] before the
+# comint output (for all queries, even queries run at the prompt):
 
-#+BEGIN_SRC emacs-lisp
-  ;; (defvar sql-last-prompt-pos 1
-  ;;   "position of last prompt when added recording started")
-  ;; (make-variable-buffer-local 'sql-last-prompt-pos)
-  ;; (put 'sql-last-prompt-pos 'permanent-local t) 
-  ;; (defun sql-add-newline-first (output)
-  ;;   "Add newline to beginning of OUTPUT for `comint-preoutput-filter-functions'
-  ;;   This fixes up the display of queries sent to the inferior buffer
-  ;;   programatically."
-  ;;   (let ((begin-of-prompt
-  ;;          (or (and comint-last-prompt-overlay
-  ;;                   ;; sometimes this overlay is not on prompt
-  ;;                   (save-excursion
-  ;;                     (goto-char (overlay-start comint-last-prompt-overlay))
-  ;;                     (looking-at-p comint-prompt-regexp)
-  ;;                     (point)))
-  ;;              1)))
-  ;;     (if (> begin-of-prompt sql-last-prompt-pos)
-  ;;         (progn
-  ;;           (setq sql-last-prompt-pos begin-of-prompt)
-  ;;           (concat "\n" output))
-  ;;       output))) 
-  ;; (defun sqli-add-hooks ()
-  ;;   "Add hooks to `sql-interactive-mode-hook'."
-  ;;   (add-hook 'comint-preoutput-filter-functions
-  ;;             'sql-add-newline-first)) 
-  ;; (add-hook 'sql-interactive-mode-hook 'sqli-add-hooks)
-#+END_SRC
+# #+BEGIN_SRC emacs-lisp
+#   ;; (defvar sql-last-prompt-pos 1
+#   ;;   "position of last prompt when added recording started")
+#   ;; (make-variable-buffer-local 'sql-last-prompt-pos)
+#   ;; (put 'sql-last-prompt-pos 'permanent-local t) 
+#   ;; (defun sql-add-newline-first (output)
+#   ;;   "Add newline to beginning of OUTPUT for `comint-preoutput-filter-functions'
+#   ;;   This fixes up the display of queries sent to the inferior buffer
+#   ;;   programatically."
+#   ;;   (let ((begin-of-prompt
+#   ;;          (or (and comint-last-prompt-overlay
+#   ;;                   ;; sometimes this overlay is not on prompt
+#   ;;                   (save-excursion
+#   ;;                     (goto-char (overlay-start comint-last-prompt-overlay))
+#   ;;                     (looking-at-p comint-prompt-regexp)
+#   ;;                     (point)))
+#   ;;              1)))
+#   ;;     (if (> begin-of-prompt sql-last-prompt-pos)
+#   ;;         (progn
+#   ;;           (setq sql-last-prompt-pos begin-of-prompt)
+#   ;;           (concat "\n" output))
+#   ;;       output))) 
+#   ;; (defun sqli-add-hooks ()
+#   ;;   "Add hooks to `sql-interactive-mode-hook'."
+#   ;;   (add-hook 'comint-preoutput-filter-functions
+#   ;;             'sql-add-newline-first)) 
+#   ;; (add-hook 'sql-interactive-mode-hook 'sqli-add-hooks)
+# #+END_SRC
 
 
 ** Web
