--- a/README.org
+++ b/README.org
@@ -232,6 +232,7 @@ In Dired (see mark [[https://www.gnu.org/software/emacs/manual/html_node/emacs/M
 | ~$~      | Go to a bookmark                                           |
 | ~(~      | Hide/show details                                          |
 | ~s~      | Sort by date or filename                                   |
+| ~S~      | Interactively sort (by filename, date, reverse, etc.)      |
 | ~i~      | Include subdirectory                                       |
 |----------+------------------------------------------------------------|
 | ~o~      | Open in other window                                       |
